--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>BrickOps</title>
   </head>
 
-  <body>
-    <div id="app"></div>
+  <body class="h-full" style="position: fixed; width: 100%; height: 100%; overflow: hidden; -webkit-overflow-scrolling: touch;">
+    <div id="app" style="position: fixed; width: 100%; height: 100%; overflow: hidden;"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
